--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <EditText
+        android:id="@+id/ovPayTxt"
+        android:layout_width="106dp"
+        android:layout_height="45dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="0"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/overtimepayText"
+        app:layout_constraintStart_toStartOf="@+id/overtimepayText"
+        app:layout_constraintTop_toBottomOf="@+id/overtimepayText" />
+
+    <EditText
+        android:id="@+id/regPayTxt"
+        android:layout_width="106dp"
+        android:layout_height="45dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="0"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/hourlyWage"
+        app:layout_constraintStart_toStartOf="@+id/hourlyWage"
+        app:layout_constraintTop_toBottomOf="@+id/hourlyWage" />
+
     <TextView
         android:id="@+id/Title"
         android:layout_width="214dp"
@@ -24,20 +48,20 @@
         android:id="@+id/totalPayText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="P0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.592" />
+        app:layout_constraintVertical_bias="0.657" />
 
     <TextView
         android:id="@+id/hourlyWage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="Regular pay ( 1-8 hours ) : P100/hr"
+        android:text="Regular pay ( 1-8 hours )"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,33 +71,21 @@
         android:id="@+id/worktimeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="116dp"
         android:text="Worktime:"
         app:layout_constraintEnd_toEndOf="@+id/overtimepayText"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="@+id/overtimepayText"
         app:layout_constraintTop_toBottomOf="@+id/hourlyWage" />
-
-    <EditText
-        android:id="@+id/workTimeInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/worktimeText"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="@+id/worktimeText"
-        app:layout_constraintTop_toBottomOf="@+id/worktimeText" />
 
     <TextView
         android:id="@+id/overtimepayText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="Overtime pay ( 9+ hours) : P130/hr"
+        android:layout_marginTop="48dp"
+        android:text="Overtime pay ( 9+ hours )"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hourlyWage" />
 
@@ -81,13 +93,12 @@
         android:id="@+id/computePay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
         android:text="compute"
         android:textAllCaps="false"
         android:textColor="@color/black"
-        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/workTimeInput"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="@+id/workTimeInput"
         app:layout_constraintTop_toBottomOf="@+id/workTimeInput" />
 
@@ -95,11 +106,24 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="32dp"
         android:text="Total pay:"
         app:layout_constraintEnd_toEndOf="@+id/computePay"
-        app:layout_constraintHorizontal_bias="0.468"
+        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="@+id/computePay"
         app:layout_constraintTop_toBottomOf="@+id/computePay" />
+
+    <EditText
+        android:id="@+id/workTimeInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="0"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/worktimeText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
